# ecclesia-machine-management

./: .bazelrc  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  extensions.bzl  googleapis_ext.bzl
ecclesia/: BUILD  meson.build
ecclesia/build_defs/: BUILD  constants.bzl  deps_first.bzl  deps_second.bzl  embed.bzl  file.bzl  oss.bzl  proto.bzl  query.bzl  redpath_query.bzl  resources.bzl  shar_stub.cc.template
ecclesia/lib/: meson.build
ecclesia/lib/acpi/: BUILD  dmar.cc  dmar.emb  dmar.h  dmar_test.cc  mcfg.cc  mcfg.emb  mcfg.h  mcfg_test.cc  srat.cc  srat.emb  srat.h  srat_test.cc  system_description_table.cc  system_description_table.emb  system_description_table.h  system_description_table_test.cc
ecclesia/lib/apifs/: BUILD  apifs.cc  apifs.h  apifs_benchmark.cc  apifs_test.cc
ecclesia/lib/arbiter/: BUILD  arbiter.h  arbiter_test.cc
ecclesia/lib/atomic/: BUILD  sequence.h  sequence_test.cc
ecclesia/lib/cache/: BUILD  rcu_snapshot.h  rcu_snapshot_test.cc  rcu_store.h  rcu_store_test.cc  rcu_view.h  rcu_view_test.cc  timed_store.h  timed_store_test.cc
ecclesia/lib/circularbuffer/: BUILD  circularbuffer.h  circularbuffer_test.cc
ecclesia/lib/cleanup/: BUILD  cleanup.h
ecclesia/lib/codec/: BUILD  bits.cc  bits.h  bits_test.cc  endian.h  endian_test.cc  text.cc  text.h  text_test.cc
ecclesia/lib/complexity_tracker/: BUILD  complexity_tracker.cc  complexity_tracker.h  complexity_tracker_test.cc
ecclesia/lib/devpath/: BUILD  devpath.cc  devpath.h  devpath_test.cc  transform.cc  transform.h  transform_test.cc  transform_test.proto
ecclesia/lib/file/: BUILD  cc_embed.cc  cc_embed_interface.h  cc_embed_interface_test.cc  dir.cc  dir.h  dir_test.cc  lockfile.cc  lockfile.h  lockfile_test.cc  meson.build  mmap.cc  mmap.h  mmap_test.cc  parse_json.h  parse_json_test.cc  path.cc  path.h  path_test.cc  test_filesystem.cc  test_filesystem.h  test_filesystem_test.cc  uds.cc  uds.h  uds_test.cc
ecclesia/lib/file/test_data/: json.json  json_bad.txt  text.txt
ecclesia/lib/http/: BUILD  client.cc  client.h  client_test.cc  codes.cc  codes.h  codes_test.cc  cred.proto  curl_client.cc  curl_client.h  curl_client_test.cc  meson.build  server.h
ecclesia/lib/io/: BUILD  constants.h  generic_mmio.cc  generic_mmio.h  generic_mmio_test.cc  ioctl.cc  ioctl.h  mmio.cc  mmio.h  mmio_test.cc  mocks.h  msr.cc  msr.h  msr_test.cc
ecclesia/lib/ipmi/: BUILD  ipmi_command_identifier.h  ipmi_consts.h  ipmi_handle.cc  ipmi_handle.h  ipmi_handle_mock.h  ipmi_interface_params.proto  ipmi_manager.cc  ipmi_manager.h  ipmi_manager_mock.h  ipmi_manager_test.cc  ipmi_mechanisms.h  ipmi_pair.cc  ipmi_pair.h  ipmi_raw_interface.h  ipmi_raw_mock.h  ipmi_request.h  ipmi_response.h  ipmi_stats.h  ipmi_transport_consts.h  ipmitool_mock.h  kcs.h
ecclesia/lib/jinja2/: BUILD  loader.py
ecclesia/lib/logging/: BUILD  file.cc  file.h  file_globals.cc  file_globals.h  file_test.cc  globals.cc  globals.h  interfaces.h  logging.h  logging_test.cc  posix.cc  posix.h
ecclesia/lib/mcedecoder/: BUILD  cpu_topology.h  cpu_topology_mock.h  dimm_translator.h  mce_decode.cc  mce_decode.h  mce_decode_mock.h  mce_messages.h  skylake_mce_decode.cc  skylake_mce_decode.h
ecclesia/lib/network/: BUILD  hosts.cc  hosts.h  hosts_test.cc  ip.cc  ip.h  ip_test.cc  testing.cc  testing.h  testing_test.cc
ecclesia/lib/protobuf/: BUILD  compare.py  compare_test.proto  compare_test.py  field_mask.cc  field_mask.h  parse.h
ecclesia/lib/redfish/: BUILD  authorizer_enums.cc  authorizer_enums.h  authorizer_enums_test.cc  devpath.cc  devpath.h  devpath_test.cc  health_rollup.cc  health_rollup.h  health_rollup.proto  health_rollup_test.cc  host_filter.cc  host_filter.h  host_filter_test.cc  interface.cc  interface.h  interface_test.cc  json_ptr.cc  json_ptr.h  json_ptr_test.cc  libredfish_adapter.cc  libredfish_adapter.h  location.cc  location.h  location_test.cc  manager.cc  manager.h  manager_test.cc  node_toplogy_render_main.cc  node_topology.h  node_topology_render_main.cc  node_topology_test.cc  numbers.h  pci.cc  pci.h  property.h  property_definitions.h  property_values.h  query.cc  query.h  (+31 more)
ecclesia/lib/smbios/: BUILD  baseboard_information.h  bios.h  entry_point.emb  internal.h  memory_device.h  memory_device_mapped_address.h  platform_translator.h  processor_information.cc  processor_information.h  reader.cc  reader.h  reader_intf.h  structures.emb  system_event_log.h  system_information.h
ecclesia/lib/status/: BUILD  macros.h  posix.cc  posix.h  rpc.cc  rpc.h  test_macros.h
ecclesia/lib/strings/: BUILD  case.cc  case.h  case_test.cc  natural_sort.cc  natural_sort.h  natural_sort_test.cc  regex.h  regex_test.cc  string_view.h  string_view_test.cc  strip.cc  strip.h  strip_test.cc
ecclesia/lib/stubarbiter/: BUILD  arbiter.h  arbiter_test.cc  util.cc  util.h  util_test.cc
ecclesia/lib/task/: BUILD  manager.h  manager_test.cc  task.h  task_test.cc  task_wrapper_manager.h
ecclesia/lib/testing/: BUILD  proto.h  status.h
ecclesia/lib/thread/: BUILD  thread.cc  thread.h  thread_mock.h  thread_pool.h
ecclesia/oss/: BUILD  curl.BUILD  ipmitool.BUILD  jansson.BUILD  jinja2.BUILD  json.BUILD  jsoncpp.BUILD  libedit.BUILD  libevent.BUILD  libredfish.BUILD  markupsafe.BUILD  ncurses.BUILD  public_redfish_schema.BUILD  redfishMockupServer.BUILD
ecclesia/redfish_mockups/: BUILD  build_defs.bzl  serve_mockup.sh
(+1131 files in other folders)
